--- a/app/globals.css
+++ b/app/globals.css
@@ -129,7 +129,7 @@
 }
 
 .danger_button {
-  @apply bg-red-500 hover:bg-red-700 cursor-pointer text-white;
+  @apply bg-red-600 hover:bg-red-700 dark:bg-red-500 dark:hover:bg-red-700 cursor-pointer text-white;
 }
 
 
