--- a/app/globals.css
+++ b/app/globals.css
@@ -132,6 +132,20 @@
   @apply bg-red-600 hover:bg-red-700 dark:bg-red-500 dark:hover:bg-red-700 cursor-pointer text-white;
 }
 
+.fade-up {
+ animation: .3s fadeUp ease-in;
+}
+
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 .radial-center-gradient-bg-light {
   background: radial-gradient(circle at top, #f5fbff 20%,#e5f3fd 100%);
